--- a/android/java/res/layout/brave_toolbar_tablet.xml
+++ b/android/java/res/layout/brave_toolbar_tablet.xml
@@ -11,7 +11,8 @@
     android:orientation="vertical"
     android:background="@drawable/modern_toolbar_background_grey_end_segment"
     android:layout_marginTop="8dp"
-    android:layout_height="40dp" >
+    android:layout_height="40dp"
+    android:visibility="gone" >
 
     <ImageButton android:id="@+id/brave_shields_button"
         style="@style/ToolbarButton"
