Uplift of #2831 (squashed) to dev

--- a/components/brave_new_tab_ui/brave_new_tab.html
+++ b/components/brave_new_tab_ui/brave_new_tab.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html>
+<html data-test-id="brave-new-tab-page">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
